Gap extending SubGap